src/test/ui/directory_ownership/macro-expanded-mod.stderr
error: Cannot declare a non-inline module inside a block unless it has a path attribute
  --> $DIR/macro-expanded-mod.rs:4:25
   |
LL |     ($i:ident) => { mod $i; }
   |                         ^^
...
LL |     mod_decl!(foo);
   |     --------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

